test-harness/src/snapshots/full__mut-ref-functionalization+into-fstar.snap
---
source: test-harness/src/harness.rs
expression: out
info:
  optional: false
  broken: true
  issue_id: 90
  positive: true
---
serr = '''
Compiling mut-ref-functionalization v0.1.0 (WORKSPACE_ROOT/mut-ref-functionalization)
error[CE0003]: (Diagnostics.Context.Phase Diagnostics.Phase.RefMut): UnallowedMutRef
 --> mut-ref-functionalization/src/lib.rs:5:5
  |
5 |     vec.swap(0, 1);
  |     ^^^^^^^^^^^^^^

error: could not compile `mut-ref-functionalization` due to previous error'''
sout = ''
exit = 101
